--- a/index.html
+++ b/index.html
@@ -499,10 +499,11 @@
       document.getElementById('special-picker').innerHTML = "";
       showDraftStep();
       renderGameLog();
-      logAction("Game started and cards dealt");
+      logAction("Game started and cards dealt--v3");
       logAction("Draft phase: two cards to be assigned before game");
     }
     window.onload = startGame;
   </script>
 </body>
 </html>
+
